--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     		</ul>
 		</nav>
 		
-        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/sjmin711/sjmin711.github.io/raw/master/CV.pdf?flush_cache=true">CV</a>,&nbsp;<a href="mailto:sjmin711@berkeley.edu">Email</a>]</h1>
+        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/CV.pdf?flush_cache=true">CV</a>,&nbsp;<a href="mailto:seongjoo-min@uiowa.edu">Email</a>]</h1>
 		<div>
 		<p style="text-align:center;">
-		<img src="https://github.com/sjmin711/sjmin711.github.io/raw/master/profile_photo.jpg">
+		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg">
 		<br>
 		<p1 style="text-align:center;">
 		Photo by <a href="https://www.nber.org/people/marc_dordal-i-carreras">Marc Dordal-i-Carreras</a>, a remarkable macroeconomist at Berkeley
@@ -24,8 +24,7 @@
 		</p>
 		</div>
 		<div>
-		<p>I am a Ph.D. candidate in economics at the University of California, Berkeley. My research interests are econometrics of network models and empirical industrial organization. Before joining the Ph.D. program, I studied economics and applied mathematics at the University of California, Berkeley.</p>
-		<p>In August 2020, I will join the Tippie College of Business in the University of Iowa as an assistant professor.</p>
+		<p>I am an assistant professor of economics at the University of Iowa's Tippie College of Business. My research interests are econometrics of network models and empirical industrial organization.</p>
 		</div>
 	</body>
 </html>
