--- a/research.html
+++ b/research.html
@@ -14,11 +14,11 @@
 		</nav>
 	
         	<h1>Research</h1>
-		<p><b>Working Paper:</b></p>
+		<p><b>Working Papers:</b></p>
 		<p style="text-align:center;"><a href="https://nbviewer.jupyter.org/github/sjmin711/sjmin711.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (Job Market Paper)
 		<br>
 		<br>
-			<img src="https://github.com/sjmin711/sjmin711.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
+			<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
 		</p>
 		<p1><b>Abstract:</b> 
 		U.S. consumers view rewards as the most attractive credit card feature, and the expenditures of credit card companies on customer rewards have been rising sharply. In 2018, American Express Company alone spent $9.7 bil., which accounted for a third of its total expenses. In addition, $8.4 bil. in unclaimed rewards remained at the end of the year. Travel rewards are an important component of credit card rewards, and major credit card companies in the U.S. operate loyalty programs, in which customers may transfer points to the loyalty programs of airlines and hotel chains. A credit card company’s portfolio of transfer partners involves strategic partnerships with other companies and is a significant source of product differentiation. This paper studies how credit card companies choose their portfolios of airline transfer partners and the implications for credit card users. In particular, the focus is on how resource complementarity and the network of firms affect whether to maintain, add, or delete a transfer partner. The choice of portfolios is modeled as a sequential network formation process, where transfer partnerships are determined via a sequence of bilateral meetings. Using a network formation model is necessary because whether or not to form a transfer partnership with an airline depends on the current state of the credit card company’s portfolio, the portfolios of other credit card companies, and the partnership structure among other companies. This paper conducts a revealed-preference analysis using data collected from 2014 to 2018. Estimation results indicate that a credit card company is more likely to form a transfer partnership with an airline that improves the points redemption capabilities of its loyalty program, suggesting that the complementarity of resources possessed by airlines positively affects partner choice. The pursuit of resource complementarity aligns with the welfare of credit card users. Estimation results also indicate that the network of firms has a significant effect on partner choice.
