--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg">
 		<br>
 		<p1 style="text-align:center;">
-		Photo by <a href="https://www.nber.org/people/marc_dordal-i-carreras">Marc Dordal-i-Carreras</a>, a remarkable macroeconomist at Berkeley
+		Photo by <a href="https://www.nber.org/people/marc_dordal-i-carreras">Marc Dordal-i-Carreras</a>, a remarkable macroeconomist at UC Berkeley
 		</p1>
 		</p>
 		</div>
