--- a/research.html
+++ b/research.html
@@ -15,7 +15,7 @@
 	
         	<h1>Research</h1>
 		<p><b>Working Papers:</b></p>
-		<p style="text-align:left;"><a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a>
+		<p style="text-align:left;">&bull;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a>
 		<br>
 		<br>
 			<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
