--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
 		</nav>
 	
         	<h1>Research</h1>
-		<p><b>Working Papers:</b></p>
+		<p><b>Working Paper:</b></p>
 		<p style="text-align:left;">&bull;&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a>
 		<br>
 		<br>
