--- a/research.html
+++ b/research.html
@@ -15,13 +15,13 @@
 	
         	<h1>Research</h1>
 		<p><b>Working Paper:</b></p>
-		<p style="text-align:left;">&bull;&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a>
+		<p style="text-align:left;">&bull;&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
 		<br>
 		<br>
 			<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
 		</p>
-		<p1><b>Abstract:</b> 
-		Travel rewards are an important component of credit card rewards, and major credit card issuers in the U.S. operate loyalty programs, in which customers may transfer points to the loyalty programs of partner airlines and hotel chains. A credit card issuer’s portfolio of transfer partners involves strategic partnerships with other firms and is a significant source of product differentiation. In a network environment, this paper studies how credit card issuers choose their portfolios of airline transfer partners. In particular, the focus is on how the complementarity of resources possessed by an airline and the network of firms affect whether to add, delete, or maintain a transfer partnership with the airline. I model the choice of portfolios as a sequential network formation process, where transfer partnerships between credit card issuers and airlines are determined via a sequence of bilateral meetings. Using a network formation model is necessary because whether or not to form a transfer partnership with an airline may depend on the current state of the credit card issuers’s portfolio of transfer partners, the portfolios of other credit card issuers, and partnerships between hotel chains and airlines. This paper conducts a revealed-preference analysis using observations from 2014 to 2018. Estimation results indicate that a credit card issuer is more likely to form a transfer partnership with an airline that better complements its other airline partners. Moreover, the network of firms has a significant effect on partner choice.
+		<p1><b>Abstract:</b>
+			Abstract By forming partnerships with hotel chains and airlines, major credit card issuers in the U.S. allow customers to transfer points from their loyalty programs to the partners'. Hotel chains form similar partnerships with airlines, and airlines with other airlines. Viewing their partnerships as a network and using a sequential network formation model, this article studies how credit card issuers and hotel chains strategically choose to add, delete, or maintain partnerships with airlines. Using a novel dataset that involves 3 credit card issuers, 7 hotel chains, and 43 airlines from 2014 to 2018, the estimation result suggests that a credit card issuer is more likely to form a partnership with an airline that (1) is a partner of another credit card issuer (2) is a partner of its hotel chain partner (3) better complements its existing portfolio of airline partners, after accounting for key characteristics of firms. The first two results are similar when hotel chains choose airline partners.
 		</p1>
 		<br>
 		<br>
