--- a/research.html
+++ b/research.html
@@ -16,7 +16,7 @@
         	<h1>Research</h1>
 		<p><b>Working Paper:</b></p>
 		<ul>
-		<li><p style="text-align:left;">&bull;&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
+		<li><p style="text-align:left;">&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
 		<br>
 		<br>
 			<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
@@ -29,13 +29,18 @@
 		<br>
 		<br>
 		<p><b>Work in Progress:</b></p>
-		<p style="text-align:left;">&bull;&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
+		<ul>
+		<li><p style="text-align:left;">&bull;&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
 		<p1><b>Abstract:</b>
 		Online social shopping platforms enable ordinary shoppers to share information on price discounts, product quality, and their opinions on whether it is a "good deal". Such practices not only reduce search costs for the users but also allow them to make purchases at lower prices. Moreover, the shopping platforms form partnerships with manufacturers and retailers to allow price discounts exclusive for their users. This paper studies how an online social shopping platform creates discrepancies in prices faced by online shoppers and their implications on consumer welfare. I focus on price discrepancies in identical electronics products sold by reputable online retailers. For a large number of electronics products, I utilize spot prices on Amazon.com (serve as "standard" online prices), spot prices from postings on the shopping platform ("discount" online prices), and Clickstream data (for purchase verification on the shopping platform) to study two market outcomes. First, I check how the price discrepancies, in percentage terms, depend on product characteristics, such as list prices. Second, I quantify the discrepancy in consumer welfare induced by the shopping platform.
 		</p1>
+		</li>
 		<br>
-		<p style="text-align:left;">&bull;&nbsp;Network-Based Model of Exclusive Contract Formation</p>
+		<li><p style="text-align:left;">&bull;&nbsp;Network-Based Model of Exclusive Contract Formation</p>
+		</li>
 		<br>
-		<p style="text-align:left;">&bull;&nbsp;Linear-in-Means Peer Effects with Mis-measured Linkages (with Suyong Song)</p>
+		</ul>
+		<li></li><p style="text-align:left;">&bull;&nbsp;Linear-in-Means Peer Effects with Mis-measured Linkages (with Suyong Song)</p>
+		</li>
 		</body>
 </html>
