--- a/research.html
+++ b/research.html
@@ -15,33 +15,39 @@
 	
         	<h1>Research</h1>
 		<p><b>Working Paper:</b></p>
-		<ol>
-		<li><p style="text-align:left;">&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
-		<br>
-		<br>
+			<ol>
+			<li>
+			<p style="text-align:left;">&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
+			<br>
+			<br>
 			<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/network.png" class="centerImage" height="450" width="350">
-		</p>
-		<p1><b>Abstract:</b>
-			Abstract By forming partnerships with hotel chains and airlines, major credit card issuers in the U.S. allow customers to transfer points from their loyalty programs to the partners'. Hotel chains form similar partnerships with airlines, and airlines with other airlines. Viewing their partnerships as a network and using a sequential network formation model, this article studies how credit card issuers and hotel chains strategically choose to add, delete, or maintain partnerships with airlines. Using a novel dataset that involves 3 credit card issuers, 7 hotel chains, and 43 airlines from 2014 to 2018, the estimation result suggests that a credit card issuer is more likely to form a partnership with an airline that (1) is a partner of another credit card issuer (2) is a partner of its hotel chain partner (3) better complements its existing portfolio of airline partners, after accounting for key characteristics of firms. The first two results are similar when hotel chains choose airline partners.
-		</p1>
-		</li>
-		<li><p style="text-align:left;">&nbsp;Dyadic Regression with Block-Specific Fixed Effects and Application to Input-Output Matrix</p>
-		</li>
-		</li>
-		<li><p style="text-align:left;">&nbsp;Network-Based Model of Exclusive Contract Formation</p>
-		</li>
-		</ol>
-		<br>
-		<br>
+			</p>
+			<p1><b>Abstract:</b>
+			By forming partnerships with hotel chains and airlines, major credit card issuers in the U.S. allow customers to transfer points from their loyalty programs to the partners'. Hotel chains form similar partnerships with airlines, and airlines with other airlines. Viewing their partnerships as a network and using a sequential network formation model, this article studies how credit card issuers and hotel chains strategically choose to add, delete, or maintain partnerships with airlines. Using a novel dataset that involves 3 credit card issuers, 7 hotel chains, and 43 airlines from 2014 to 2018, the estimation result suggests that a credit card issuer is more likely to form a partnership with an airline that (1) is a partner of another credit card issuer (2) is a partner of its hotel chain partner (3) better complements its existing portfolio of airline partners, after accounting for key characteristics of firms. The first two results are similar when hotel chains choose airline partners.
+			</p1>
+			</li>
+			<li>
+			<p style="text-align:left;">&nbsp;Dyadic Regression with Block-Specific Fixed Effects and Application to Input-Output Matrix</p>
+			<p1><b>Abstract:</b>
+			Viewing the Input-Output matrix as a network of industries, this paper aims to understand how exogenous shocks, such as changes in tax rates and import duty rates, affect the connections between industries and also to make predictions on the connections under counterfactual states. A novel feature is using a stochastic blockmodel to group similar industries into blocks and then utilizing block-specific fixed effects with a dyadic regression model. Using block-specific fixed effects rather than industry-specific fixed effects allows better computational tractability and the ability to make counterfactual predictions on the Input-Output matrix. This paper reports empirical results using the 2007 Input-Output matrix of the U.S. economy. 
+			</p1>
+			</li>
+			</li>
+			<li>
+			<p style="text-align:left;">&nbsp;Network-Based Model of Exclusive Contract Formation</p>
+			</li>
+			</ol>
+			<br>
+			<br>
 		<p><b>Work in Progress:</b></p>
-		<ol>
-		<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
-		<p1><b>Abstract:</b>
-		Online social shopping platforms enable ordinary shoppers to share information on price discounts, product quality, and their opinions on whether it is a "good deal". Such practices not only reduce search costs for the users but also allow them to make purchases at lower prices. Moreover, the shopping platforms form partnerships with manufacturers and retailers to allow price discounts exclusive for their users. This paper studies how an online social shopping platform creates discrepancies in prices faced by online shoppers and their implications on consumer welfare. I focus on price discrepancies in identical electronics products sold by reputable online retailers. For a large number of electronics products, I utilize spot prices on Amazon.com (serve as "standard" online prices), spot prices from postings on the shopping platform ("discount" online prices), and Clickstream data (for purchase verification on the shopping platform) to study two market outcomes. First, I check how the price discrepancies, in percentage terms, depend on product characteristics, such as list prices. Second, I quantify the discrepancy in consumer welfare induced by the shopping platform.
-		</p1>
-		<br>
-		</ol>
-		<li></li><p style="text-align:left;">&nbsp;Linear-in-Means Peer Effects with Mis-measured Linkages (with Suyong Song)</p>
-		</li>
-		</body>
+			<ol>
+			<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
+			<p1><b>Abstract:</b>
+			Online social shopping platforms enable ordinary shoppers to share information on price discounts, product quality, and their opinions on whether it is a "good deal". Such practices not only reduce search costs for the users but also allow them to make purchases at lower prices. Moreover, the shopping platforms form partnerships with manufacturers and retailers to allow price discounts exclusive for their users. This paper studies how an online social shopping platform creates discrepancies in prices faced by online shoppers and their implications on consumer welfare. I focus on price discrepancies in identical electronics products sold by reputable online retailers. For a large number of electronics products, I utilize spot prices on Amazon.com (serve as "standard" online prices), spot prices from postings on the shopping platform ("discount" online prices), and Clickstream data (for purchase verification on the shopping platform) to study two market outcomes. First, I check how the price discrepancies, in percentage terms, depend on product characteristics, such as list prices. Second, I quantify the discrepancy in consumer welfare induced by the shopping platform.
+			</p1>
+			<br>
+			</ol>
+			<li></li><p style="text-align:left;">&nbsp;Linear-in-Means Peer Effects with Mis-measured Linkages (with Suyong Song)</p>
+			</li>
+	</body>
 </html>
