--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
 		</nav>
 	
         	<h1>Research</h1>
-		<p><b>Working Paper:</b></p>
+		<p><b>Working Papers:</b></p>
 			<ol>
 			<li>
 			<p style="text-align:left;">&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a> (submitted)
@@ -39,7 +39,7 @@
 			</ol>
 			<br>
 			<br>
-		<p><b>Work in Progress:</b></p>
+		<p><b>Works in Progress:</b></p>
 			<ol>
 			<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
 			<p1><b>Abstract:</b>
