--- a/teaching.html
+++ b/teaching.html
@@ -14,26 +14,52 @@
 		</nav>
 		
         	<h1>Teaching</h1>
-		<p>I have served as a graduate student instructor (teaching assistant) for undergraduate and graduate courses in econometrics, applied econometrics, and industrial organization.</p> 
 		
-		<p1> <b>Econometrics and Applied Econometrics</b> (with Professor Bryan S. Graham):
+		<p1> <b>Spring 2024</b>:
 			<ul type="disc">
-				<li><font size="+1">Econometric Analysis (Econ 141)</font></li>
-				<li><font size="+1">Applied Econometrics and Public Policy (Econ 142)</font></li>
-				<li><font size="+1">Econometrics (Econ 240A)</font></li>
+				<li><font size="+1">ECON:5800 Econometrics</font></li>
 			</ul>
 		</p1>
-			<p1>Covered Topics: Average Treatment Effect, Instrumental Variable Regression, Quantile Regression, Survival Analysis, Bayesian Bootstrapping, Basic Asymptotic Theory.
-		</p1>
 		<br>
-		<br>
-		<br>
-		<p1><b>Industrial Organization</b> (with Professor Kei Kawai):
+		<p1> <b>Fall 2023</b>:
 			<ul type="disc">
-				<li><font size="+1">Industrial Organization and Public Policy (Econ 121)</font></li>
+				<li><font size="+1">ECON:5800 Introduction to Econometrics (5.15/6)</font></li>
 			</ul>
 		</p1>
-		<p1>Covered Topics: Pricing Strategies, Bundling, Basic Game Theory, Basic Auction Theory.
+		<br>
+		<p1> <b>Spring 2023</b>:
+			<ul type="disc">
+				<li><font size="+1">ECON:5800 Econometrics (5.90/6)</font></li>
+			</ul>
 		</p1>
+		<br>
+		<p1> <b>Fall 2022</b>:
+			<ul type="disc">
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (5.55/6)</font></li>
+			</ul>
+		</p1>
+		<br>
+		<p1> <b>Spring 2022</b>:
+			<ul type="disc">
+				<li><font size="+1">ECON:5800 Econometrics (5.75/6)</font></li>
+			</ul>
+		</p1>
+		<br>
+		<p1> <b>Fall 2021</b>:
+			<ul type="disc">
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (5.60/6)</font></li>
+			</ul>
+		</p1>
+		<br>
+		<p1> <b>Spring 2021</b>:
+			<ul type="disc">
+				<li><font size="+1">ECON:5800 Econometrics (5.55/6)</font></li>
+			</ul>
+			<ul type="disc">
+				<li><font size="+1">ECON:3355 Economic and Business Forecasting (5.80/6)</font></li>
+			</ul>
+		</p1>
+		
+		
 	</body>
 </html>
