--- a/teaching.html
+++ b/teaching.html
@@ -17,7 +17,7 @@
 		
 		<p1> <b>2024</b>:
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics</font></li>
+				<li><font size="+1">ECON:5800 Econometrics (ongoing)</font></li>
 			</ul>
 		</p1>
 		<p1> <b>2023</b>:
