--- a/teaching.html
+++ b/teaching.html
@@ -15,25 +15,25 @@
 		
         	<h1>Teaching</h1>
 		
-		<p1> <b>AY 2023-2024</b>
+		<p1> <b>Academic Year 2023-2024</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (ongoing)</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2) (5.15/6)</font></li>
 			</ul>
 		</p1>
-		<p1> <b>AY 2022-2023</b>
+		<p1> <b>Academic Year 2022-2023</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (5.90/6)</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2) (5.55/6)</font></li>
 			</ul>
 		</p1>
-		<p1> <b>AY 2021-2022</b>
+		<p1> <b>Academic Year 2021-2022</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (5.75/6)</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2) (5.60/6)</font></li>
 			</ul>
 		</p1>
-		<p1> <b>AY 2020-2021</b>
+		<p1> <b>Academic Year 2020-2021</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (5.55/6)</font></li>
 				<li><font size="+1">ECON:3355 Economic and Business Forecasting (5.80/6)</font></li>
