--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 		</li>
 		<br>
 		<li>
-			<p style="text-align:left;">&nbsp;Linear-in-Means Peer Effects with Mis-measured Linkages (with Suyong Song)</p>
+			<p style="text-align:left;">&nbsp;Linear-in-Means Peer Effects with Mismeasured Linkages (with Suyong Song)</p>
 		</li>
 		</ol>
 	</body>
