--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@
 		<br>
 		<br>
 		
-		<p><b>Works in Progress:</b></p>
+		<p><b>Work in Progress:</b></p>
 		<ol>
 		<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
 			<p1><b>Abstract:</b>
