--- a/teaching.html
+++ b/teaching.html
@@ -17,7 +17,7 @@
 		
 		<p1> <b>Academic Year 2023-2024</b>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (ongoing)</font></li>
+				<li><font size="+1">ECON:5800 Econometrics [first-year Ph.D. course] (ongoing)</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics [2 undergraduate courses] (5.15/6)</font></li>
 			</ul>
 		</p1>
