--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		</ul>
 		</nav>
 		
-        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV.pdf">CV_Seongjoo</a>,&nbsp;<a href="https://tippie.uiowa.edu/people/seongjoo-min">Contact</a>]</h1>
+        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf">CV</a>,&nbsp;<a href="https://tippie.uiowa.edu/people/seongjoo-min">Contact</a>]</h1>
 		<div>
 		<p style="text-align:center;">
 		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg">
