--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</p>
 		</div>
 		<div>
-		<p>I am an assistant professor of economics at the Tippie College of Business, University of Iowa. My research interests are econometrics of network models and empirical industrial organization.</p>
+		<p>I am an assistant professor of economics at the Tippie College of Business, University of Iowa. My research interests are econometrics, empirical industrial organization, and networks.</p>
 		</div>
 	</body>
 </html>
