--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf">CV</a>,&nbsp;<a href="https://tippie.uiowa.edu/people/seongjoo-min">Contact</a>]</h1>
 		<div>
 		<p style="text-align:center;">
-		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg">
+		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg" width="500" height="529">
 		<br>
 		<p1 style="text-align:center;">
 		Photo by <a href="https://www.nber.org/people/marc_dordal-i-carreras">Marc Dordal-i-Carreras</a>, a remarkable macroeconomist at HKUST
