--- a/teaching.html
+++ b/teaching.html
@@ -15,29 +15,29 @@
 		
         	<h1>Teaching</h1>
 		
-		<p1> <b>Academic Year 2023-2024</b>
+		<p> <b>Academic Year 2023-2024</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) [ongoing]</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) [5.15/6]</font></li>
 			</ul>
-		</p1>
-		<p1> <b>Academic Year 2022-2023</b>
+		</p>
+		<p> <b>Academic Year 2022-2023</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) [5.90/6]</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) [5.55/6]</font></li>
 			</ul>
-		</p1>
-		<p1> <b>Academic Year 2021-2022</b>
+		</p>
+		<p> <b>Academic Year 2021-2022</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) [5.75/6]</font></li>
 				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) [5.60/6]</font></li>
 			</ul>
-		</p1>
-		<p1> <b>Academic Year 2020-2021</b>
+		</p>
+		<p> <b>Academic Year 2020-2021</b>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) [5.55/6]</font></li>
 				<li><font size="+1">ECON:3355 Economic and Business Forecasting (undergraduate course) [5.80/6]</font></li>
 			</ul>
-		</p1>				
+		</p>				
 	</body>
 </html>
