--- a/research.html
+++ b/research.html
@@ -27,12 +27,15 @@
 		<li>
 			<p style="text-align:left;">&nbsp;Dyadic Regression with Block-Specific Fixed Effects and Application to Input-Output Matrix</p>
 			<p1><b>Abstract:</b>
-			Viewing the Input-Output matrix as a network of industries, this paper aims to understand how exogenous shocks, such as changes in tax rates and import duty rates, affect the connections between industries and also to make predictions on the connections under counterfactual states. A novel feature is using a stochastic blockmodel to group similar industries into blocks and then utilizing block-specific fixed effects with a dyadic regression model. Using block-specific fixed effects rather than industry-specific fixed effects allows better computational tractability and the ability to make counterfactual predictions on the Input-Output matrix. This paper reports empirical results using the 2007 Input-Output matrix of the U.S. economy. 
-			</p1>
+			Viewing the Input-Output matrix as a network of industries, this paper studies how the interconnectedness of domestic U.S. industries is affected by exogenous shocks, such as changes in tax rates and import duty rates. It also proposes a method for making predictions on the Input-Output matrix under hypothetical scenarios. A key innovation is utilizing a stochastic blockmodel to categorize industries into blocks that share block-specific fixed effects and then using a dyadic regression model. This paper presents empirical results using the 2007 Input-Output matrix of the U.S. economy.
+			</p1>	
 		</li>
 		<br>
 		<li>
-			<p style="text-align:left;">&nbsp;Network-Based Model of Exclusive Contract Formation</p>
+			<p style="text-align:left;">&nbsp;On Centrality of Supplier-Buyer Network of the U.S. Tech Sector</p>
+			<p1><b>Abstract:</b>
+			Analysis of the U.S. tech sector's supplier-buyer network shows a strengthening of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. The substantial growth of communities associated with AAPL and MSFT underscores their rising dominance within the U.S. tech sector. This paper offers a model-based explanation for this ecosystem expansion and its potential impact under counterfactual scenarios.
+			</p1>
 		</li>
 		</ol>
 		<br>
@@ -42,12 +45,15 @@
 		<ol>
 		<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
 			<p1><b>Abstract:</b>
-			Online social shopping platforms enable ordinary shoppers to share information on price discounts, product quality, and their opinions on whether it is a "good deal". Such practices not only reduce search costs for the users but also allow them to make purchases at lower prices. Moreover, the shopping platforms form partnerships with manufacturers and retailers to allow price discounts exclusive for their users. This paper studies how an online social shopping platform creates discrepancies in prices faced by online shoppers and their implications on consumer welfare. I focus on price discrepancies in identical electronics products sold by reputable online retailers. For a large number of electronics products, I utilize spot prices on Amazon.com (serve as "standard" online prices), spot prices from postings on the shopping platform ("discount" online prices), and Clickstream data (for purchase verification on the shopping platform) to study two market outcomes. First, I check how the price discrepancies, in percentage terms, depend on product characteristics, such as list prices. Second, I quantify the discrepancy in consumer welfare induced by the shopping platform.
+			Online social shopping platforms empower users to share “deals”. Users share information on price discount, product quality, and their opinion on overall value. It is evident that overall value of a “deal” depends on product characteristics such as product type (e.g., durable v.s. nondurable) and non-product characteristics such as price history (e.g., frequently on sale v.s. rarely on sale). This paper models consumer’s response to “deals” as a function of product and non-product characteristics and empirically quantifies it.
 			</p1>
 		</li>
 		<br>
 		<li>
 			<p style="text-align:left;">&nbsp;Linear-in-Means Peer Effects with Mismeasured Linkages (with Suyong Song)</p>
+			<p1><b>Abstract:</b>
+			We consider linear-in-means peer effects model with a social network in which individuals may systematically misreport friendships (“measurement error”) due to unobserved heterogeneities. Both the outcome variable of the linear-in-means model and the measurement error could covary with unobserved heterogeneities, so that peer effects are not identified. Moreover, instruments that depend on the social network may be invalid in the presence of measurement error. We propose conditions for identifying peer effects in the presence of measurement error and a consistent estimator.
+			</p1>
 		</li>
 		</ol>
 	</body>
