--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 		<li>
 			<p style="text-align:left;">&nbsp;On Centrality of Supplier-Buyer Network of the U.S. Tech Sector</p>
 			<p1><b>Abstract:</b>
-			Analysis of the U.S. tech sector's supplier-buyer network shows a strengthening of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. The substantial growth of communities associated with AAPL and MSFT underscores their rising importance, or centrality, within the U.S. tech sector. This paper offers a model-based explanation for such rising importance and its potential impact under counterfactual scenarios.
+			Analysis of the U.S. tech sector's supplier-buyer network shows an expansion of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. Substantial expansion of communities associated with AAPL and MSFT underscores their rising importance, or centrality, within the U.S. tech sector. This paper provides a model-based explanation for such rising importance and its potential impact under counterfactual scenarios.
 			</p1>
 		</li>
 		</ol>
