--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
 		
 		<p><b>Work in Progress:</b></p>
 		<ol>
-		<li><p style="text-align:left;">&nbsp;Search Cost and Information on Price Discounts: Your Consumer Surplus May Vary</p>
+		<li><p style="text-align:left;">&nbsp;A Quantification of Consumer Response to Product and Non-Product Characteristics</p>
 			<p1><b>Abstract:</b>
 			Online social shopping platforms empower users to share “deals”. Users share information on price discount, product quality, and their opinion on overall value. It is evident that overall value of a “deal” depends on product characteristics such as product type (e.g., durable v.s. nondurable) and non-product characteristics such as price history (e.g., frequently on sale v.s. rarely on sale). This paper models consumer’s response to “deals” as a function of product and non-product characteristics and empirically quantifies it.
 			</p1>
