--- a/research.html
+++ b/research.html
@@ -27,14 +27,14 @@
 		<li>
 			<p style="text-align:left;">&nbsp;Dyadic Regression with Block-Specific Fixed Effects and Application to Input-Output Matrix</p>
 			<p1><b>Abstract:</b>
-			Viewing the Input-Output matrix as a network of industries, this paper studies how the interconnectedness of domestic U.S. industries is affected by exogenous shocks, such as changes in tax rates and import duty rates. It also proposes a method for making predictions on the Input-Output matrix under hypothetical scenarios. A key innovation is utilizing a stochastic blockmodel to categorize industries into blocks that share block-specific fixed effects and then using a dyadic regression model. This paper presents empirical results using the 2007 Input-Output matrix of the U.S. economy.
+			Viewing the Input-Output matrix as a network of industries, this article studies how exogenous shocks, such as changes in tax rates and import duty rates, can affect relationships between industries within the U.S. economy. It also proposes a method for making counterfactual predictions on the Input-Output Matrix. A key innovation is utilizing a stochastic blockmodel to group industries into blocks, so that pairs of industries that belong to the same pair of blocks share common pairwise block-specific fixed effects. It uses dyadic regression model to estimate model parameters, together with pairwise block-specific fixed effects. An empirical analysis using the 2007 U.S. Input-Output Matrix shows that the supplier-buyer relationship between commodities (or industries) are sensitive to changes in net tax rates and import duty rates.
 			</p1>	
 		</li>
 		<br>
 		<li>
 			<p style="text-align:left;">&nbsp;On Centrality of Supplier-Buyer Network of the U.S. Tech Sector</p>
 			<p1><b>Abstract:</b>
-			Analysis of the U.S. tech sector's supplier-buyer network shows an expansion of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. Substantial expansion of communities associated with AAPL and MSFT underscores their rising importance, or centrality, within the U.S. tech sector. This paper provides a model-based explanation for such rising importance and its potential impact under counterfactual scenarios.
+			Analysis of the U.S. tech sector's supplier-buyer network shows a strengthening of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. Supplier-buyer interactions within each ecosystem is far greater than across ecosystems, indicating exclusivity in suppliers and buyers around each of the four firms. Moreover, the substantial growth of AAPL and MSFT's significance, or centrality, in the network and their ecosystems underscore their rising dominance within the U.S. tech sector.
 			</p1>
 		</li>
 		</ol>
