--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
 		</li>
 		<br>
 		<li>
-			<p style="text-align:left;">&nbsp;On Centrality of Supplier-Buyer Network of the U.S. Tech Sector</p>
+			<p style="text-align:left;">&nbsp;Communities and Centralities of Supplier-Buyer Network of the U.S. Tech Sector</p>
 			<p1><b>Abstract:</b>
 			Analysis of the U.S. tech sector's supplier-buyer network shows a strengthening of ecosystems around major firms from 2003 to 2014. Community detection methods reveal four distinct ecosystems, each led by AAPL, DELL, IBM, and MSFT. Supplier-buyer interactions within each ecosystem is far greater than across ecosystems, indicating exclusivity in suppliers and buyers around each of the four firms. Moreover, the substantial growth of AAPL and MSFT's significance, or centrality, in the network and their ecosystems underscore their rising dominance within the U.S. tech sector.
 			</p1>
