--- a/teaching.html
+++ b/teaching.html
@@ -14,6 +14,13 @@
 		</nav>
 		
         	<h1>Teaching</h1>
+
+                <p><b>Academic Year 2024-2025</b></p>
+			<ul type="disc">
+				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) []</font></li>
+				<li><font size="+1">ECON:4800 Econometric Analysis (advanced undergraduate course) [5.67/6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) [5.83/6]</font></li>
+			</ul>
 		
 		<p><b>Academic Year 2023-2024</b></p>
 			<ul type="disc">
