--- a/teaching.html
+++ b/teaching.html
@@ -14,6 +14,7 @@
 		</nav>
 		
         	<h1>Teaching</h1>
+		*Bracket contains [course evaulation out of 6]
 
                 <p><b>Academic Year 2024-2025</b></p>
 			<ul type="disc">
