--- a/teaching.html
+++ b/teaching.html
@@ -14,13 +14,13 @@
 		</nav>
 		
         	<h1>Teaching</h1>
-		*Bracket contains [course evaulation out of 6]
+		*Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support], reported in course evaluation. Maximum score is 6 for each item.
 
                 <p><b>Academic Year 2024-2025</b></p>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) []</font></li>
-				<li><font size="+1">ECON:4800 Econometric Analysis (advanced undergraduate course) [5.67/6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) [5.83/6]</font></li>
+				<li><font size="+1">ECON:4800 Econometric Analysis (advanced undergraduate course) [5.5, 5, 6, 5.5, 6, 6 ]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) [6,6,6,5,6,6]</font></li>
 			</ul>
 		
 		<p><b>Academic Year 2023-2024</b></p>
