--- a/teaching.html
+++ b/teaching.html
@@ -14,7 +14,7 @@
 		</nav>
 		
         	<h1>Teaching</h1>
-		*Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support], reported in course evaluation. Maximum score is 6 for each item.
+		*Bracket contains medians of [Organization, Clarity, Learning Focused, Learning Materials, Assessment, Support] reported in student course evaluation. Maximum score is 6 for each item.
 
                 <p><b>Academic Year 2024-2025</b></p>
 			<ul type="disc">
