--- a/teaching.html
+++ b/teaching.html
@@ -26,22 +26,22 @@
 		<p><b>Academic Year 2023-2024</b></p>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [5.15/6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [5, 6, 4, 4, 6, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2022-2023</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [5.90/6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [5.55/6]</font></li>
+				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [5.5, 5, 5.5, 6, 6, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2021-2022</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [5.75/6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [5.60/6]</font></li>
+				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 5.5, 6, 6, 6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (2 undergraduate courses) <br> [6, 5.5, 5.5, 5.5, 5.5, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2020-2021</b></p>
 			<ul type="disc">
-				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [5.55/6]</font></li>
-				<li><font size="+1">ECON:3355 Economic and Business Forecasting (undergraduate course) <br> [5.80/6]</font></li>
+				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 5, 5, 5.5, 5.5, 6]</font></li>
+				<li><font size="+1">ECON:3355 Economic and Business Forecasting (undergraduate course) <br> [6, 5.5, 5.5, 6, 5.5, 6]</font></li>
 			</ul>			
 	</body>
 </html>
