--- a/teaching.html
+++ b/teaching.html
@@ -26,17 +26,17 @@
 		<p><b>Academic Year 2023-2024</b></p>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate courses) <br> [5, 6, 4, 4, 6, 6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) <br> [5, 6, 4, 4, 6, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2022-2023</b></p>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 6, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate courses) <br> [5.5, 5, 5.5, 6, 6, 6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) <br> [5.5, 5, 5.5, 6, 6, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2021-2022</b></p>
 			<ul type="disc">
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 6, 5.5, 6, 6, 6]</font></li>
-				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate courses) <br> [6, 5.5, 5.5, 5.5, 5.5, 6]</font></li>
+				<li><font size="+1">ECON:3300 Introduction to Econometrics (undergraduate course) <br> [6, 5.5, 5.5, 5.5, 5.5, 6]</font></li>
 			</ul>
 		<p><b>Academic Year 2020-2021</b></p>
 			<ul type="disc">
