--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		</ul>
 		</nav>
 		
-        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf">CV</a>,&nbsp;<a href="https://tippie.uiowa.edu/people/seongjoo-min">Contact</a>]</h1>
+        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf">CV</a>,&nbsp;<a href="mailto:seongjoom@gmail.com">Contact</a>]</h1>
 		<div>
 		<p style="text-align:center;">
 		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg" width="500" height="529">
@@ -24,7 +24,7 @@
 		</p>
 		</div>
 		<div>
-		<p>I am an assistant professor of economics at the Tippie College of Business, University of Iowa. My research interests are econometrics, empirical industrial organization, and networks.</p>
+		<p>My research interests are econometrics, empirical industrial organization, and networks.</p>
 		</div>
 	</body>
 </html>
