--- a/teaching.html
+++ b/teaching.html
@@ -43,7 +43,7 @@
 				<li><font size="+1">ECON:5800 Econometrics (first-year Ph.D. course) <br> [6, 5, 5, 5.5, 5.5, 6]</font></li>
 				<li><font size="+1">ECON:3355 Economic and Business Forecasting (undergraduate course) <br> [6, 5.5, 5.5, 6, 5.5, 6]</font></li>
 			</ul>
-		<p><b>Selected Student Feedback (Thanks everyone!)</b></p>
+		<p><b>Selected Student Feedback (I really appreciate everyone who has taken my course. Thank you!)</b></p>
 			<ul type="disc">
 				<li><font size="+1">"Professor Min is amazing! One of the best professors I have ever had at Iowa. Funny, well-spoken, and always highly focused on how he is conveying content."</font></li>
 				<li><font size="+1">"Thanks for alway being available during office hours. Your jokes also made lecture much more enjoyable to be in."</font></li>
