--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</p>
 		</div>
 		<div>
-		<p>My research interests are econometrics, empirical industrial organization, and networks.</p>
+		<p>My research interests are econometrics, empirical industrial organization, and network formation.</p>
 		</div>
 	</body>
 </html>
