--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		</ul>
 		</nav>
 		
-        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf">CV</a>,&nbsp;<a href="mailto:seongjoom@gmail.com">Email</a>,&nbsp;<a href="https://www.linkedin.com/in/seongjoo-min-023744315/">LinkedIn</a>]</h1>
+        	<h1>Seongjoo Min &nbsp;&nbsp;[<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf?flush_cache=true">CV</a>,&nbsp;<a href="mailto:seongjoom@gmail.com">Email</a>,&nbsp;<a href="https://www.linkedin.com/in/seongjoo-min-023744315/">LinkedIn</a>]</h1>
 		<div>
 		<p style="text-align:center;">
 		<img src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/profile_photo.jpg" width="500" height="529">
