--- a/CV.html
+++ b/CV.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html>
 <embed
 	src= "https://github.com/seongjoo-min/seongjoo-min.github.io/blob/master/CV_Seongjoo.pdf"
 	type="application/pdf"
 	width="100%"
 	height="100%"
 />
+</html>
