--- a/CV.html
+++ b/CV.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-<embed
-	src= "https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf"
-	type="application/pdf"
-	width="100%"
-	height="100%"
-/>
+	<iframe src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" width="100%" height="500px">
+   	 <p>This browser does not support PDFs. Please download the PDF to view it: 
+   	 <a href="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf">Download PDF</a>.</p>
+	</iframe>
 </html>
