--- a/CV.html
+++ b/CV.html
@@ -1,4 +1,7 @@
-<iframe src="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" width="100%" height="500px">
-   	 <p>This browser does not support PDFs. Please download the PDF to view it: 
-   	 <a href="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf">Download PDF</a>.</p>
-</iframe>
+<html>
+<object data="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" type="application/pdf" width="100%" height="600px">
+    <p>It appears you don't have a PDF plugin for this browser.
+    No biggie... you can <a href="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf">click here to
+    download the PDF file.</a></p>
+</object>
+</html>
