--- a/CV.html
+++ b/CV.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 <object data="https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/CV_Seongjoo.pdf" type="application/pdf" width="100%" height="600px">
     <p>It appears you don't have a PDF plugin for this browser.
