--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
 		<p><b>Working Papers:</b></p>
 		<ol>
 		<li>
-			<p style="text-align:left;">&nbsp;<a href="https://nbviewer.jupyter.org/github/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf?flush_cache=true">Network of Loyalty Programs: A Sequential Formation</a>
+			<p style="text-align:left;">&nbsp;<a href="http://docs.google.com/gview?url=https://github.com/seongjoo-min/seongjoo-min.github.io/raw/master/Network_of_Loyalty_Programs.pdf">Network of Loyalty Programs: A Sequential Formation</a>
 			</p>
 			<p1><b>Abstract:</b>
 			By forming partnerships with hotel chains and airlines, major credit card issuers in the U.S. allow customers to transfer points from their loyalty programs to the partners'. Hotel chains form similar partnerships with airlines, and airlines with other airlines. Viewing their partnerships as a network and using a sequential network formation model, this article studies how credit card issuers and hotel chains strategically choose to add, delete, or maintain partnerships with airlines. Using a novel dataset that involves 3 credit card issuers, 7 hotel chains, and 43 airlines from 2014 to 2018, the estimation result suggests that a credit card issuer is more likely to form a partnership with an airline that (1) is a partner of another credit card issuer (2) is a partner of its hotel chain partner (3) better complements its existing portfolio of airline partners, after accounting for key characteristics of firms. The first two results are similar when hotel chains choose airline partners.
